--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,9 @@
     name = Eunjae Lee
     email = karis612@gmail.com
 
+[github]
+    user = "eunjae-lee"
+
 [color]
 
 	# Use colors in Git commands that are capable of colored output when
