--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,11 @@
-[user]
-	name = Eunjae Lee
-	email = hey@eunjae.dev
+[includeIf "gitdir:~/workspace/"]
+    path = ~/workspace/dotfiles/.gitconfig-default
 
-[github]
-    user = "eunjae-lee"
+[includeIf "gitdir:~/sandbox/"]
+    path = ~/workspace/dotfiles/.gitconfig-default
+
+[includeIf "gitdir:~/workspace_lwe/"]
+    path = ~/workspace/dotfiles/.gitconfig-lwe
 
 [color]
 
