--- a/app-configs/lazygit/config.yml
+++ b/app-configs/lazygit/config.yml
@@ -1,5 +1,5 @@
 customCommands:
-  - key: "<c-p>"
+  - key: "<s-m-p>"
     context: "global"
     command: "git push --set-upstream && gh pr create --web"
     description: "Create a PR"
