--- a/.gitconfig
+++ b/.gitconfig
@@ -40,3 +40,8 @@
 
 [core]
 	editor = vim
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
