--- a/app-configs/lazygit/config.yml
+++ b/app-configs/lazygit/config.yml
@@ -1,13 +1,13 @@
 customCommands:
-  - key: "<c-P>"
+  - key: "<c-p>"
     context: "files, localBranches"
     command: "git push --set-upstream && gh pr create --web"
     description: "Create a PR"
-  - key: "<c-D>"
+  - key: "<c-d>"
     context: "files"
     command: "git checkout HEAD -- yarn.lock && git checkout main && git pull"
     description: "Switch to main branch"
-  - key: "<c-C>"
+  - key: "<c-c>"
     context: "files"
     description: "Commit and push"
     prompts:
@@ -23,5 +23,5 @@ customCommands:
       - type: "input"
         title: "PR number"
         key: "PRNumber"
-    command: "gh pr checkout {{.Form.PRNumber}}"
+    command: "/Users/eunjae/workspace/dotfiles/bin/gpr {{.Form.PRNumber}}"
     loadingText: "Checking out PR..."
