--- a/app-configs/zed/settings.json
+++ b/app-configs/zed/settings.json
@@ -22,8 +22,8 @@
   },
   "agent": {
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4o"
+      "provider": "zed.dev",
+      "model": "claude-sonnet-4"
     },
     "version": "2"
   },
