--- a/.gitconfig
+++ b/.gitconfig
@@ -40,6 +40,7 @@
 
 [core]
 	editor = vim
+	excludesfile = /Users/eunjae/.gitignore_global
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
