--- a/app-configs/tmux.conf
+++ b/app-configs/tmux.conf
@@ -8,8 +8,8 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # Shift Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
+bind -n C-[ previous-window
+bind -n C-] next-window
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -18,10 +18,10 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Windows
-bind-key -n F1 select-window 1
-bind-key -n F2 select-window 2
-bind-key -n F3 select-window 3
-bind-key -n F4 select-window 4
+# bind -n C-1 select-window -t 1
+# bind -n C-2 select-window -t 2
+# bind -n C-3 select-window -t 3
+# bind -n C-4 select-window -t 4
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
