--- a/app-configs/lazygit/config.yml
+++ b/app-configs/lazygit/config.yml
@@ -1,5 +1,5 @@
 customCommands:
-  - key: "<c-p>"
+  - key: "<c-P>"
     context: "files, localBranches"
     command: "git push --set-upstream && gh pr create --web"
     description: "Create a PR"
