--- a/migrations/20251001_084839_symlinks.yml
+++ b/migrations/20251001_084839_symlinks.yml
@@ -9,10 +9,8 @@ links:
   - source: "~/workspace/dotfiles/app-configs/raycast-scripts"
     target: "~/workspace/raycast-scripts"
 
-provider: sh
-command: "rm -f ~/Library/Application Support/lazygit/config.yml"
-
 provider: symlink
 links:
   - source: "~/workspace/dotfiles/app-configs/lazygit/config.yml"
     target: "~/Library/Application Support/lazygit/config.yml"
+    force: true
