--- a/migrations/20251001_092547_mise.yml
+++ b/migrations/20251001_092547_mise.yml
@@ -4,6 +4,12 @@
   packages:
     - mise
 
+- provider: symlink
+  links:
+    - source: "~/workspace/dotfiles/app-configs/mise.toml"
+      target: "~/.config/mise/config.toml"
+      force: true
+
 - provider: sh
   command: |
     mise use --global node@22
