--- a/.gitconfig
+++ b/.gitconfig
@@ -54,12 +54,12 @@
 	helper = !/opt/homebrew/bin/gh auth git-credential
     pager = delta
 
-[interactive]
-    diffFilter = delta --color-only
-
-[delta]
-    navigate = true  # use n and N to move between diff sections
-    dark = true      # or light = true, or omit for auto-detection
+#[interactive]
+#    diffFilter = delta --color-only
+#
+#[delta]
+#    navigate = true  # use n and N to move between diff sections
+#    dark = true      # or light = true, or omit for auto-detection
 
 [merge]
     conflictStyle = zdiff3
